# dissect

./: .gitignore  CMakeLists.txt  README.md  check-fixed.h  dissect-linprog.cpp  dissect-sat.cpp  dissect-sat.sh  figure.h  fixed-isometries.cpp  geom.h  isometry.h  lattice.h  main.cpp  sat.h  solve.sh  to_tr12.py  triangular2med.py  vis.py  visualize.py
cmake/: glpk.cmake  kissat.cmake
fig/: squared_5x5  squared_7x7  tr12_triangle_11x11  tr12_triangle_5x5  tr12_triangle_7x7  tr6_hexagon_11x11  tr6_hexagon_5x5  tr6_triangle_10x10  tr6_triangle_13x13  tr6_triangle_14x14  tr6_triangle_15x15  tr6_triangle_21x21  tr6_triangle_22x22  tr6_triangle_28x28  tr_hexagon_10x10  tr_hexagon_11x11  tr_hexagon_13x13  tr_hexagon_2x2  tr_hexagon_3x3  tr_hexagon_4x4  tr_hexagon_5x5  tr_hexagon_7x7  tr_hexguz_5x5  tr_triangle_10x10  tr_triangle_11x11  tr_triangle_13x13  tr_triangle_14x14  tr_triangle_15x15  tr_triangle_21x21  tr_triangle_22x22  tr_triangle_28x28  tr_triangle_7x7  triangular_5x5  triangular_8march  triangular_med6_14x14  triangular_med_11x11  triangular_med_5x5  triangular_med_7x7  triangular_med_8march
lattices/: sq  tr  tr12  triangular_med
